# sketchbook

./: .gitignore  README
bayes_nets/: README.md  bayes_gibbs.py  bayes_prior.py  enum_memo.py  full_joint.py
boole/: README.md  bdd.py  boole.py  carroll  puzzler.py  validity.py  validity_iter.py  validity_smallerfirst.py
capability-vm/: README.md  cap.py  compiling.py  ivm.py  notes.text  stepper.py  terp.py  testme.py  vm2.text
chess/: README.md  chess.py
coroutines/: README.md  crunchchannels.py  io.py  multitask.py  simplest.py  tryme.py
doomer/: README.md
editor/: README  ansi.py  editor.py
enfilades/: monoidal_tree.py
gimme/: README.md  bar.maker  foo.maker  gimme  gimme-ab-initio
hand-fsm-in-c/: Makefile  README.text  sketch.c
hdl/: README.md  hdl1.py  hdl2.py
lex/: DFA.py  README  UnionFind.py  c-lex0  deriv2.py  dfa_deriv2.py  dfa_minimize.py  dfa_nfa.py  dfa_statecount.py  enum_res.py  lex.py  memo.py
lispmachine/: README.md  lispmachine.scm  testme.scm
lispy/: lllis.py
long-algebra/: README.md  formalism.py
lz/: README.md  lz77.py  lz78.py  lzw.py  thuemorse.py
markov/: marky.py
meinsum/: meinsum.py
metatoo/: README.md  bootstrap.py  build.sh  metalib.py  metatoo.metatoo  metatoo.py  runmetameta.py
misc/: 17.py  agingcache.py  arrayviews.py  autodiff.py  bars.el  chat.el  chat.sh  decorator.py  fliptrick.py  hex.py  hopfieldnet.py  initter.py  kernel.scm  macroe.py  multisub.py  pike.py  pokerhands.py  polytypic_walk.py  primesieve.py  quasiquote.scm  rationalize.py  retrying.py  roman_numerals.py  rsvp.py  runN.py  sokoban.py  streams.py  sub1.lambda  subpalindrome.py  symbdiff.py  throttling.js  trampoline.py  trivial72.scm  trm.py  two_envelopes.py  txtzyme.py  water.py  write_offside.py
mit-class/: README  todo.text
mutagen/: README.md  formatting.py  mutagen.py  renderers.py
packmouse/: README.md  packmouse.scm  peg.peg  pegger.peg  pegger0.peg
parsing/: README.md  deriv.py  (+10 more)
polyroot/: README.md  polyroot.cabal
polyroot/src/: Main.hs  Polyroot.hs
polyroot/test/: Test.hs
(+178 files in other folders)
