name:                polyroot
version:             0.1.0.0
synopsis:            Compute roots of polynomials
description:         Please see README.md
homepage:            https://github.com/darius/sketchbook/tree/master/polyroot
license:             GPLv3
license-file:        LICENSE
author:              Darius Bacon <darius@wry.me>
maintainer:          Darius Bacon <darius@wry.me>
copyright:           2016
category:            fun
build-type:          Simple
cabal-version:       >=1.10

executable polyroot
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , ieee754
